--- a/templates/index.html
+++ b/templates/index.html
@@ -110,5 +110,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<p class="text-center mt-5 mb-3 text-muted">تصميم وتطوير بواسطه حمزه القرشي</p>
 </body>
 </html>
